Changelog:

3.4
- Added support for quests that have scaling experience (AV). There's not enough data for a perfect formula, but we estimate the exp based on confirmed lvl 62 values from last TBC Classic with video proof

3.3
- Rightclicking on an item will let you mark it as Collected on another character/mailbox
- It's now possible to shift-click items in the Items tab to link them, and ctrl-click to open the dressing room
- Removed Of Love and Family from Strat prep guide
- Added Williden's Journal and Blasted Lands item quests as turnin quests again (low exp)
- Added missing target for Huum Wildmane and Layo
- Added tooltips to the Items tab in the UI
- Quests on tooltips on the Route tab now include what type the quest is (questlog, optional, turnin)
- Added additional step for dungeons/raid/pvp to show that this part is done
- Added Prequests of MC in MC part in addition to Part1/2 and UBRS/LBRS
- Fixed reputation and profession requirement of some quests
- Blank Dungeon Grind prepared (based on BiosparksTV and myro spreadsheet)
- Fixed warning popups sometimes showing on quests that aren't on your selected route, when accepting or completing quests

3.2
- Added Glyphed Oaken Branch and included prequests (Strat, Group)
- Added Betrayed and included prequests (Solo)
- Added Un'Goro quests and updated the routes
- Summoning Shadra now Questlog instead of Disharmony of Fire due to patrol (Strat,Group)
- Heart of the Mountain now Questlog instead of Disharmony of Fire due to patrol (Solo)
- Removed Shifty Merchant quest in quest prep, added as turnin instead
- Added additional mob targets for Chillwind Horns
- Namechange of addon and folder structure
- Bugfixes

3.1
- Mayor overhaul of routes and quests
	- Solo route
	- Group route
	- Strat group route
- Bugfixes